--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.14.0",
     "memory-cache": "^0.2.0",
     "react": "^18.3.1",
@@ -30,7 +31,8 @@
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.0",
     "styled-components": "^6.1.13",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
